--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Modificar.cshtml
@@ -104,29 +104,9 @@
             }
         });
         GridView_comprobante_detalle.PerformCallback();
-        GridView_cheque_op.PerformCallback();
+        GridView_DebitoBanco_op.PerformCallback();
     }
 
-    function GetNumCheque() {
-        var datos = {
-            IdBanco: $("#IdBanco").val()
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("GetNumCheque", "ChequeBanco",new { Area = "Banco"})',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                $("#cb_Cheque").val(data);
-            },
-            error: function (error) {
-            }
-        });
-    }
 </script>
 
 @using (Html.BeginForm("Modificar", "NotaDeDebitoBanco", FormMethod.Post, new { @class = "form", @role = "form" }))
