--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/Nuevo.cshtml
@@ -169,6 +169,8 @@
                     GridViewPartial_ventas.PerformCallback();
                     GridViewPartial_compras.PerformCallback();
                     GridViewPartial_retenciones.PerformCallback();
+                    GridViewPartial_exportaciones.PerformCallback();
+                    GridViewPartial_anulados.PerformCallback();
 
                 },
                 error: function (error) {
