--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/Nuevo.cshtml
@@ -33,8 +33,7 @@
                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                    settings.Properties.DisplayFormatString = "[{0}] - {1}-{2}";
                    settings.Properties.Columns.Add("IdanioFiscal", "Año").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                   settings.Properties.Columns.Add("pe_FechaIni", "Fecha Inicio").Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                   settings.Properties.Columns.Add("pe_FechaFin", "Fecha fin").Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                   settings.Properties.Columns.Add("nom_periodo_combo", "Periodo").Width = System.Web.UI.WebControls.Unit.Percentage(80);
                    ////Campo ID
                    settings.Properties.ValueField = "IdPeriodo";
                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
