--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_por_distribuir.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_por_distribuir.cshtml
@@ -50,6 +50,7 @@
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdProducto_padre";
+            column.Caption = "Accion";
             column.UnboundType = DevExpress.Data.UnboundColumnType.String;
             column.SetDataItemTemplateContent(c =>
             {
