--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/_GridViewPartial_transferencias.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/_GridViewPartial_transferencias.cshtml
@@ -86,7 +86,7 @@
         });
 
         settings.Columns.Add("IdTransferencia","ID").Width=Unit.Percentage(5);
-        settings.Columns.Add("tr_Observacion").Width=Unit.Percentage(20);
+        settings.Columns.Add("tr_Observacion","Observación").Width=Unit.Percentage(20);
         settings.Columns.Add(column =>
         {
             column.FieldName = "tr_fecha";
