--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/CatalogoImportacion/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/CatalogoImportacion/Anular.cshtml
@@ -24,7 +24,7 @@
                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                    settings.Properties.DisplayFormatString = "[{0}] - {1}";
                    settings.Properties.Columns.Add("IdCatalogo_tipo", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("ctdDescripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(90);
+                   settings.Properties.Columns.Add("ct_descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(90);
                    //Campo ID
                    settings.Properties.ValueField = "IdCatalogo_tipo";
                    settings.Properties.ValueType = typeof(int);
