--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/_GridViewPartial_talonario_cheque.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/_GridViewPartial_talonario_cheque.cshtml
@@ -58,9 +58,12 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdBanco = DataBinder.Eval(tc.DataItem, "IdBanco"), Num_cheque = DataBinder.Eval(tc.DataItem, "Num_cheque") })
-                    );
+                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
+                {
+                    ViewContext.Writer.Write(
+                    Html.ActionLink("Modificar", "Modificar", new { IdBanco = DataBinder.Eval(tc.DataItem, "IdBanco"), Num_cheque = DataBinder.Eval(tc.DataItem, "Num_cheque") })
+                        );
+                }
             });
             c.SetHeaderTemplateContent(tc =>
             {
