--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RetiroActivo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RetiroActivo/Nuevo.cshtml
@@ -115,7 +115,7 @@
     <div id="Tabs" role="tabpanel">
         <ul class="nav nav-tabs" role="tablist">
             <li class="active">
-                <a href="#tab_datos" aria-controls="datos" role="tab" data-toggle="tab">Datos de la mejora</a>
+                <a href="#tab_datos" aria-controls="datos" role="tab" data-toggle="tab">Datos generales</a>
             </li>
             <li>
                 <a href="#tab_diario" aria-controls="diario" role="tab" data-toggle="tab">Diario contable</a>
