--- a/ERP/Core.Erp.Web/Areas/Banco/Views/BancoCuenta/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/BancoCuenta/Modificar.cshtml
@@ -12,6 +12,7 @@
 {
     @Html.HiddenFor(q=>q.IdEmpresa)
     @Html.HiddenFor(q => q.IdBanco)
+    @Html.HiddenFor(q => q.IdBanco_Financiero)
 
     <div class="row">
         <div class="col-md-12">
