--- a/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Nuevo.cshtml
@@ -166,7 +166,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="cb_Observacion">Observación</label>
-                    @Html.TextAreaFor(q => q.cb_Observacion, new { @id = "cb_Valor", @class = "form-control", @rows = 3 })
+                    @Html.TextAreaFor(q => q.cb_Observacion, new { @id = "cb_Observacion", @class = "form-control", @rows = 2 })
                     @Html.ValidationMessageFor(q => q.cb_Observacion, "", new { @class = "text-danger" })
                 </div>
             </div>
