--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Modificar.cshtml
@@ -186,7 +186,17 @@
             </div>
         </div>
     </div>
-
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="cb_Observacion">Observación</label>
+                    @Html.TextAreaFor(q => q.cb_Observacion, new { @id = "cb_Observacion", @class = "form-control", @rows = 2 })
+                    @Html.ValidationMessageFor(q => q.cb_Observacion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div id="Tabs" role="tabpanel">
         <ul class="nav nav-tabs" role="tablist">
