--- a/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Anular.cshtml
@@ -167,8 +167,20 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="cb_Observacion">Observación</label>
-                    @Html.TextAreaFor(q => q.cb_Observacion, new { @id = "cb_Valor", @class = "form-control", @rows = 3 })
+                    @Html.TextAreaFor(q => q.cb_Observacion, new { @id = "cb_Observacion", @class = "form-control", @rows = 2 })
                     @Html.ValidationMessageFor(q => q.cb_Observacion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="MotivoAnulacion">Motivo anuación</label>
+                    @Html.TextAreaFor(q => q.MotivoAnulacion, new { @id = "MotivoAnulacion", @class = "form-control", @rows = 2 })
+                    @Html.ValidationMessageFor(q => q.MotivoAnulacion, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
